# needlecraft

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  build.sh  cleanup.sh  docker-compose.yml  env.example  exercism  exercism.py  install.sh  mail_api.py  nessus_api.py  pincushion.py  pyproject.toml  run.sh  salvare  uninstall.sh  voodoo.py
config/: requirements.txt
needlecraft/: cli.py  config.py  doc_gen_api.py  pincushion.py  voodoo.py
scripts/: exercism  exercism.py  salvare  salvare.py
